Added file uploading

--- a/client/src/components/BooksListView/collectionPage.less
+++ b/client/src/components/BooksListView/collectionPage.less
@@ -14,7 +14,8 @@
   flex-grow: 2;
   width:220px;
   max-width: 320px;
-  height: 220px;
+  //height: 220px;
+  height: 340px;
   margin: 12px;
   background-color: #17212b;
   border-radius: 4px;
@@ -45,8 +46,9 @@
   margin:8px
 }
 .card img{
-  height: 120px;
-  border-Radius: 16px;
+  height: 240px;
+  max-width: available;
+  border-Radius: 4px;
   box-Shadow: 0 0 3px #666;
   cursor: pointer;
 }
