added new page for book, fixed page catalogue

--- a/client/src/components/BooksListView/collectionPage.less
+++ b/client/src/components/BooksListView/collectionPage.less
@@ -15,7 +15,7 @@
   width:220px;
   max-width: 320px;
   //height: 220px;
-  height: 340px;
+  //height: 340px;
   margin: 12px;
   background-color: #17212b;
   border-radius: 4px;
@@ -30,8 +30,8 @@
   display: flex;
   flex-flow:column nowrap;
   align-items: center;
-
   padding: 16px;
+  height: 100%;
 }
 .card-title{
   color:white;
@@ -39,14 +39,24 @@
   font-weight: bold;
   font-size: 18px;
   margin-right: 8px;
+  margin-top: 0px;
+  margin-bottom: 16px;
 }
 .card-subtitle{
   color:grey;
   font-size: 14px;
   margin:8px
 }
+.card-main{
+  color:white;
+  font-size: 14px;
+  margin:8px;
+  width: 100%;
+  max-width:240px;
+}
 .card img{
   height: 240px;
+  width: auto;
   max-width: available;
   border-Radius: 4px;
   box-Shadow: 0 0 3px #666;
@@ -109,4 +119,12 @@
   color: white;
   font-weight: bold;
   font-size: 16px;
+}
+.book-img{
+  height: 330px;
+  width: auto;
+  margin: 0 auto;
+  max-width: available;
+  border-Radius: 4px;
+  box-Shadow: 0 0 3px #666;
 }
